--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="row">  
                   <div class="col-md-6 mb-4">  
                     <div class="form-outline">
+                       <!--  Add NEW lINE I-->
                        <p hidden>This paragraph should be hidden.</p>
                       <input type="text" id="form3Example1m" class="form-control form-control-lg" />  
                       <label class="form-label" for="form3Example1m"> First name </label>  
